@@ -2,14 +2,24 @@ package com.ce.chat2.room.service;
 
 import com.ce.chat2.participation.entity.Participation;
 import com.ce.chat2.participation.repository.ParticipationRepository;
+import com.ce.chat2.room.dto.request.RoomInviteRequest;
+import com.ce.chat2.room.dto.request.RoomNameRequest;
+import com.ce.chat2.room.dto.response.NewRoomResponse;
+import com.ce.chat2.room.dto.response.RoomListResponse;
+import com.ce.chat2.room.dto.response.RoomResponse;
 import com.ce.chat2.room.entity.Room;
+import com.ce.chat2.room.exception.NoFriendsFoundException;
 import com.ce.chat2.room.repository.RoomRepository;
+import com.ce.chat2.user.dto.UserListResponse;
+import com.ce.chat2.user.entity.User;
+import com.ce.chat2.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -18,14 +28,16 @@ public class RoomService {
 
     private final RoomRepository roomRepository;
     private final ParticipationRepository participationRepository;
+    private final UserRepository userRepository;
+    private final RoomWebSocketService roomWebSocketService;
 
-    public List<String> sendInitialRooms(Integer userId) {
-        List<String> roomList = participationRepository.findAllRoomsByUserId(userId)
+    public void sendInitialRooms(Integer userId) {
+        RoomListResponse response = RoomListResponse.of(participationRepository.findAllRoomsByUserId(userId)
                 .stream()
                 .map(Participation::getRoomId)
-                .toList();
-        log.info("roomList: {}", roomList);
-        return roomList;
+                .collect(Collectors.toList()));
+
+        roomWebSocketService.sendInitialRoom(userId, response);
     }
 
     /**
@@ -37,45 +49,58 @@ public class RoomService {
      * 2. SQS를 활용한 비동기 재처리
      *    실패 시 DynamoDB에 직접 다시 쓰는 것이 아니라, SQS에 메시지를 보내고 백그라운드에서 재시도하는 방식도 가능
      */
-    public Room createNewRoom(Integer creatorId, List<Integer> allMembersId) {
-        // 1. uuid 생성, latestMessage 생성
-        UUID uuid = UUID.randomUUID();
-        String roomId = uuid.toString();
-        String roomName = creatorId + " 님의 채팅방"; // @TODO username
+    public void createNewRoom(RoomInviteRequest request, User creator) {
+        List<Integer> invitedIds = request.getInvitedIds();
+        Integer creatorId = creator.getId();
+        List<Integer> allMembersId = Stream.concat(invitedIds.stream(), Stream.of(creatorId)).collect(Collectors.toList());
         String latestMessage = "[System] 새로운 채팅방이 생성되었습니다.";
-        Instant now = Instant.now();
 
-        Room newRoom = Room.builder()
-                .roomId(roomId)
-                .roomName(roomName)
-                .latestMessage(latestMessage)
-                .createdAt(now)
-                .latestTimestamp(now)
-                .build();
+        Room newRoom = roomRepository.save(Room.of(creator, latestMessage));
+        participationRepository.batchSave(invite(allMembersId, newRoom.getRoomId(), creator.getId()));
 
-        log.info(newRoom.toString());
-
-        // 2. ChatRoom 테이블에 데이터 생성
-        roomRepository.save(newRoom);
-
-        // 3. uuid와 user 매핑해서 batch insert
-        List<Participation> newParticipations = allMembersId.stream().map(id ->
-                        Participation.builder()
-                                .roomId(roomId)
-                                .userId(id)
-                                .createdAt(now)
-                                .build())
-                .toList();
-
-        log.info("{}", newParticipations.size());
-        participationRepository.batchSave(newParticipations);
-
-        return newRoom;
+        NewRoomResponse response = NewRoomResponse.of(newRoom.getRoomId(), allMembersId);
+        roomWebSocketService.notifyUsersAboutNewRoom(response);
     }
 
     public void exitRoom(Integer userId, String roomId) {
-        // delete user to room relation
-        Participation userToExit = Participation.builder().userId(userId).roomId(roomId).build();
-        participationRepository.delete(userToExit);
+        participationRepository.delete(Participation.of(userId, roomId));
+    }
+
+    public List<UserListResponse> getFriendsListNotInChatRoom(User user, String roomId) {
+
+        Set<Integer> members = participationRepository.findUserIdsByRoomId(roomId);
+
+        List<UserListResponse> responses = userRepository.findByFrom(user)
+                .stream()
+                .filter(f -> !members.contains(f.getId()))
+                .map(UserListResponse::to)
+                .collect(Collectors.toList());
+
+        if (responses.isEmpty()) {
+            throw new NoFriendsFoundException();
+        }
+        return responses;
+    }
+
+    public void addMembers(RoomInviteRequest request, String roomId, User inviter) {
+        List<Integer> invitedIds = request.getInvitedIds();
+
+        participationRepository.batchSave(invite(invitedIds, roomId, inviter.getId()));
+        NewRoomResponse response = NewRoomResponse.of(roomId, invitedIds);
+
+        roomWebSocketService.notifyUsersAboutNewRoom(response);
+    }
+
+    public void updateRoomName(RoomNameRequest request, String roomId, String roomName, User updater) {
+        String latestMessage = "[System] " + updater.getName() + " 님이 채팅방 이름을 변경했습니다.";
+        Room updatedRoom = roomRepository.update(Room.of(roomId, roomName, latestMessage));
+        RoomResponse response = RoomResponse.of(updatedRoom);
+        roomWebSocketService.notifyUsersAboutUpdatedRoom(response);
+    }
+
+    private List<Participation> invite(List<Integer> invited, String roomId, Integer inviterId) {
+        return invited.stream()
+                .map(id -> Participation.of(id, roomId, inviterId))
+                .collect(Collectors.toList());
     }
 }
